# Equity_Volatility_Analysis

./: .flake8  .pre-commit-config.yaml  ARIMA_analysis.py  README.md  analysis.py  analysis_close.py  cleaning.py  cleaning_2.0.py  cleaning_2.py  functions.py  import_data.py  main.py  main_2.py  processing.py  processing_2.py  processing_TEST.py  processing_alt_data.py  processing_hourly_return.py  processing_interpolate.py  processing_prev_tick.py  pyproject.toml  test.py  test_2.py
Old_scripts/: analysis.py  analysis_close.py  main.py  processing.py  processing_interpolate.py  processing_prev_tick.py
Old_scripts_IGNORE/: AAPL.csv  README.md  S&P_EQUAL.csv  ivv.csv  processing_alt_data.py  processing_hourly_return.py
data/: 5_minute.xlsx  CLEAN_A.xlsx  HERE.xlsx  NSDQ.csv  S&P500.csv  T.xlsx  TEST.xlsx  TESTER.xlsx  WHATEVER.xlsx  aapl.us.txt  ivv.us.txt  stock_D.csv
data/clean/: CLEAN_B.xlsx  CLEAN_C.xlsx  CLEAN_D.xlsx
equityvolatilityanalysis/: __init__.py  cleaning.py  functions.py  main.py  processing.py
