[tool.poetry]
name = "Equity_Volatility_Analysis"
version = "0.1.0"
description = "TODO: Add description"
authors = [
    "Kelvin Brinham",
]
readme = "README.md"

[[tool.poetry.source]]
name = "kelvinbrinham"
url = "https://github.com/kelvinbrinham/Equity_Volatility_Analysis.git"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
pandas = "^1.3.1"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
line_length = 80
skip_gitignore = true
